--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@ $(document).ready(function(){
     <label for="exampleInputEmail2" class="label">Delivered to</label>
     <input type="text" class="form-control" id="towhere" placeholder="2400 Durant Avenue">
   </div>
-  <button type="submit" class="btn btn-primary" id="button">Submit</button>
+  <button type="button" class="btn btn-link" id="button" href="/submit">Submit</button>
 </form class="form-control" id="pwd">
 </div>
-<p><a href="/logout">Logout</a>
+<p><a href="/submit">Logout</a>
 
 </body>
 
