--- a/templates/index.html
+++ b/templates/index.html
@@ -26,20 +26,20 @@ $(document).ready(function(){
   </div>
   <div class="form-group">
     <label for="exampleInputName2" class="label">Get me</label>
-    <input type="text" class="form-control" id="item" placeholder="Food">
+    <input type="text"  class="form-control" id="item" placeholder="Food">
   </div>
   <div class="form-group">
     <label for="exampleInputEmail2" class="label">From</label>
-    <input type="text" class="form-control" id="fromwhere" placeholder="Subway">
+    <input type="text" class="form-control autocomplete" id="fromwhere" placeholder="Subway">
   </div>
   <div class="form-group">
     <label for="exampleInputEmail2" class="label">Delivered to</label>
-    <input type="text" class="form-control" id="towhere" placeholder="2400 Durant Avenue">
+    <input type="text" class="form-control autocomplete" id="towhere" placeholder="2400 Durant Avenue">
   </div>
-  <button type="button" class="btn btn-link" id="button" href="/submit">Submit</button>
+  <a href="/submit" class="btn btn-primary" id="button">Submit</a>
 </form class="form-control" id="pwd">
 </div>
-<p><a href="/submit">Logout</a>
+<p><a href="/logout">Logout</a>
 
 </body>
 
