--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,25 @@
+<html>
+{% load staticfiles %}
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{% static 'social/posts/style.css' %}" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+</head>
 {% if user and not user.is_anonymous %}
   <a>Hello, {{ user.get_full_name }}!</a>
   <br>
   <a href="/submit">Logout</a>
 {% else %}
-  <a href="/twitter">{% csrf_token %}Login with Twitter</a>
+<body>
+	<script>
+$(document).ready(function(){
+	$("#fade").fadeIn(1200);
+	
+	});
+</script>
+<div id="fade">
+  <a id="title" href="/twitter">{% csrf_token %}Login with Twitter</a>
+ </div>
+</body>
 {% endif %}
+</html>
